# alx-low_level_programming

0x00-hello_world/: 0-main.s  0-preprocessor  100-intel  100-main.c  100-main.s  101-quote.c  3-name  4-puts.c  5-printf.c  6-size.c  README.md  main.c  main.s
0x01-variables_if_else_while/: .2-print_alphabet.c.swp  0-positive_or_negative.c  1-last_digit  1-last_digit.c  100-print_comb3  100-print_comb3.c  101-print_comb4  101-print_comb4.c  102-print_comb5.c  2-print_alphabet.c  3-print_alphabets.c  4-print_alphabt.c  5-print_numbers.c  6-print_numberz.c  7-print_tebahpla.c  8-print_base16.c  9-print_comb  9-print_comb.c
0x02-functions_nested_loops/: 0-putchar.c  1-alphabet.c  1-main.c  10-add.c  100-times_table.c  101-natural.c  102-fibonacci.c  103-fibonacci.c  104-fibonacci.c  11-98  11-print_to_98.c  2-main.c  2-print_alphabet_x10.c  3-islower.c  3-main.c  4-isalpha.c  4-main.c  5-sign.c  6-abs.c  7-last_digit  7-print_last_digit.c  8-24_hours.c  9-times_table.c  CMakeLists.txt  README.md
0x03-debugging/: 0-main.c  README.md  positive_or_negative.c
0x04-more_functions_nested_loops/: .main.h.swp  0-isupper.c  1-isdigit.c  10-print_triangle.c  100-prime_factor.c  2-mul.c  3-print_numbers  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-diagonals  7-print_diagonal.c  8-print_square.c  9-fizz_buzz.c  README.md
0x05-pointers_arrays_strings/: .0-reset_to_98.c.swp  .100-atoi.c.swp  .101-keygen.c.swp  .2-strlen.c.swp  .3-puts.c.swp  .4-print_rev.c.swp  .5-rev_string.c.swp  .6-puts2.c.swp  .7-puts_half.c.swp  .9-strcpy.c.swp  1-swap.c  (+14 more)
