cmake_minimum_required(VERSION 3.24)
project(0x02_functions_nested_loops)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(.idea)

add_executable(0x02_functions_nested_loops
        .idea/.gitignore
        .idea/0x02-functions_nested_loops.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .9-times_table.c.swp
        0-putchar
        0-putchar.c
        1-alphabet
        1-alphabet.c
        1-main.c
        10-main.c
        100-main.c
        11-main.c
        2-alphabet_x10
        2-main.c
        2-print_alphabet_x10.c
        3-islower
        3-islower.c
        3-main.c
        4-isalpha
        4-isalpha.c
        4-main.c
        5-main.c
        5-sign
        5-sign.c
        6-abs
        6-abs.c
        6-main.c
        7-last_digit
        7-main.c
        7-print_last_digit.c
        8-24_hours.c
        8-main.c
        9-main.c
        9-times_table
        9-times_table.c
        _putchar.c
        main.h
        README.md)
